lava_server/htdocs/css/default.css
html {
  margin: 0;
  padding: 0;
  height: 100%;
}

body {
  padding: 0;
  margin: 0;
  height: 100%;
  color: #EEE;
  background-color: #999999;
  font-family: Ubuntu, Helvetica Neue, Verdana, sans-serif;
}

body, input, th, td {
  font-family: Ubuntu, Helvetica Neue, Verdana, sans-serif;
  font-size: 10pt;
}

code {
  font-family: UbuntuBeta Mono, Lucida Console, Consolas, monospace;
}

a {
  color: #08C;
}


/* Selection style */

::selection { 
  color: white;
  background-color: #222;
}

::-moz-selection {
  color: white;
  background-color: #222;
}

::-webkit-selection {
  color: white;
  background-color: #222;
}

/* The master container of all things, similar to body */

#lava-container {
  color: #EEE;
  position: relative;
  height: 100%; /* IE6 */
  height: auto !important; /* good browsers */
  min-height: 100%; /* good browsers */
  min-width: 860px;
}

/* Header */

#lava-panel {
  background: black;
  color: #cccccc;

  font-family: 'Cantarell', sans-serif;
  font-weight: bold;
  font-size: 14px;

  /*
  border-bottom: 1px solid #333;
  */

  display: box;
  display: -moz-box;
  display: -webkit-box;

  width: 100%;
  position: relative;
  z-index: 1000;
  

  background-image: linear-gradient(bottom, #444 50%, #333 90%);
  background-image: -o-linear-gradient(bottom, #444 50%, #333 90%);
  background-image: -moz-linear-gradient(bottom, #444 50%, #333 90%);
  background-image: -webkit-linear-gradient(bottom, #444 50%, #333 90%);
  background-image: -ms-linear-gradient(bottom, #444 50%, #333 90%);
  background-image: -webkit-gradient(
    linear,
    left bottom,
    left top,
    color-stop(0.5, #444),
    color-stop(0.9, #333)
  );
}

#lava-panel.active {
}

#lava-panel .lava-panel-element {
}

#lava-panel .lava-panel-element .lava-panel-menu-text {
  display: table-cell;
  vertical-align: middle;
  padding: 1.2ex 1ex;
}

#lava-panel .lava-panel-element:hover {
  border-color: white;
}

#lava-panel .lava-panel-element.lava-indicator {
  box-pack: end;
  -moz-box-pack: end;
  -webkit-box-pack: end;
}

#lava-panel .lava-panel-element.has-menu {
  cursor: pointer;
}

#lava-panel .lava-panel-element.active {
  color: white;
  background: #0084b0;
}

#lava-panel a {
  color: inherit;
  text-decoration: none;
}

/* Spacer */

#lava-panel-spacer {
  box-flex: 1;
  -moz-box-flex: 1;
  -webkit-box-flex: 1;
}

/* Panel menu items */

#lava-panel ul.lava-panel-menu {
  list-style: none;

  position: absolute;
  left: 0;
  top: -1000px;

  background: white;
  color: black;

  border: 1px solid #BBB;
  border-radius: 0 0 3px 3px;

  margin: 0;
  padding: 3px 0;
  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);

  z-index: 1000;
}

#lava-panel ul.lava-panel-menu li {
  margin: 0;
  padding: 0;
  font-size: 10pt;
  font-weight: bold;
  text-shadow: 0 0 2pt #CCC;
}

#lava-panel ul.lava-panel-menu li a {
  display: block;
  padding: 2pt 1ex;
}

#lava-panel ul.lava-panel-menu li a:hover {
  color: white;
  background: #0084b0;
  text-shadow: none;
}

/* User indicator */

#lava-user-indicator {
  text-align: center;
}

#lava-user-indicator img {
  vertical-align: top;
}

#lava-user-indicator .sign-in-hint {
  color: #888;
}

/* AJAX indicator */

#lava-ajax-indicator {
  opacity: 0.0;
}

#lava-ajax-indicator img {
  vertical-align: middle;
}

/* Logo */

#lava-logo {
  min-width: 860px;
  margin: 1em 3em;
}

#lava-logo img {
  border: none;
}

/* Around content area */

#lava-around-content {
  margin: 1em 3em 100px 3em;
  background-color: #333;
  border-radius: 8px;
}


#lava-around-content:before {
  display: block;
  content: " ";
  width: 100%;
  height: 360px;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1000;
  background-image: linear-gradient(bottom, rgb(153,153,153) 0%, rgb(0,0,0) 70%);
  background-image: -o-linear-gradient(bottom, rgb(153,153,153) 0%, rgb(0,0,0) 70%);
  background-image: -moz-linear-gradient(bottom, rgb(153,153,153) 0%, rgb(0,0,0) 70%);
  background-image: -webkit-linear-gradient(bottom, rgb(153,153,153) 0%, rgb(0,0,0) 70%);
  background-image: -ms-linear-gradient(bottom, rgb(153,153,153) 0%, rgb(0,0,0) 70%);
  background-image: -webkit-gradient(
    linear,
    left bottom,
    left top,
    color-stop(0, rgb(153,153,153)),
    color-stop(0.7, rgb(0,0,0))
  );
}

/* Breadcrumbs */

#lava-breadcrumbs {
  font-size: 10pt;
  margin: 0;
  padding: 0.5ex 1em;
}

#lava-breadcrumbs ul {
  display: inline-block;
  margin: 0 0 0 1ex;
  padding: 0;
}

#lava-breadcrumbs ul li {
  list-style: none;
  display: inline;
  margin: 0;
  padding: 0;
}

#lava-breadcrumbs ul li a {
  text-decoration: underline;
  color: inherit;
}

#lava-breadcrumbs ul li:before {
  content: " » ";
}

#lava-breadcrumbs ul li:first-child:before {
  content: "";
}

#lava-content-and-sidebar,
#lava-content-without-sidebar {
  background-color: white;
  border-radius: 8px;
  -moz-border-radius: 8px;
  border: 10pt dashed yellow, 10pt dashed black;
  color: #444;
  margin: 1ex 0 75px 0;
  overflow-x: auto;
  box-shadow: 0 -3pt 5pt rgba(0,0,0, 0.4);
}


/* Sidebar */

#lava-sidebar {
  width: 200px;
  vertical-align: top;
  padding: 10px 15px;
  display: table-cell;
}

/* Content */

#lava-content {
  padding: 10px 15px;
  vertical-align: top;
}

/* Footer */

#lava-footer {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  clear: both;
  border-top: 2px solid #fff;

  margin: 0 auto;
  height: 100px;

  text-align: center;
  font-size: 8pt;

  background-image: linear-gradient(bottom, rgb(75,75,75) 30%, rgb(35,35,35) 100%);
  background-image: -o-linear-gradient(bottom, rgb(75,75,75) 30%, rgb(35,35,35) 100%);
  background-image: -moz-linear-gradient(bottom, rgb(75,75,75) 30%, rgb(35,35,35) 100%);
  background-image: -webkit-linear-gradient(bottom, rgb(75,75,75) 30%, rgb(35,35,35) 100%);
  background-image: -ms-linear-gradient(bottom, rgb(75,75,75) 30%, rgb(35,35,35) 100%);

  background-image: -webkit-gradient(
    linear,
    left bottom,
    left top,
    color-stop(0.3, rgb(75,75,75)),
    color-stop(1, rgb(35,35,35))
  );
  /* This is mainly for IE6 */
  background-color: #4b4b4b;
}

#lava-footer ul {
  margin: 1em 1ex;
  padding: 0;
  list-style-type: none;
}

#lava-footer ul li {
  margin-left: 1ex;
  padding: 0;
  display: inline;
}

#lava-footer ul li:before {
  content: " | ";
  margin-right: 1ex;
}

#lava-footer ul li:first-child:before {
  content: "";
}

#lava-footer a {
  color: inherit !important;
  color: white; /* IE6 */
}

/* Text listings */

ol.file_listing {
  font-family: monospace;
}

ol.file_listing li:target {
  outline: 1px solid red;
}

ol.file_listing li a:hover {
  text-decoration: underline;
}

ol.file_listing li a {
  text-decoration: none;
  color: inherit;
}

/* Form styles */

table.form_helper {
  border-collapse: collapse;
}

table.form_helper th { 
  vertical-align: top;
  text-align: right;
  padding: 1ex;
}

table.form_helper td {
  padding: 1ex;
}

table.form_helper input[type=text] {
  width: 100%;
}

table.form_helper p.help_text {
  margin: 0.2ex 1ex;
  color: #888;
}

table.form_helper tr { 
  border-spacing: 0;
  padding-top: 1ex;
}

table.form_helper div.ui-state-error {
  padding: 1ex;
}

table.form_helper ul.errorlist {
  list-style: none;
  padding: 0;
  margin: 0;
}

/* Misc items */

.lava-chart {
  clear: both;
}


h1 {
  color: #98c13d;
  clear: none;
}

h2 {
  color: #98c13d;
  clear: none;
}

h3 {
  color: #98c13d;
  clear: none;
}

h4 {
  clear: none;
}

/* Console snippets */

div.console {
  background-color: #222;
  color: white;
  border: 3px solid #000;
  padding: 0.5ex;
  overflow-x: scroll;
}

div.console code {
  white-space: pre-wrap;
}

div.console ::selection {
  color: #222;
  background-color: white;
}

div.console ::-moz-selection {
  color: #222;
  background-color: white;
}

div.console ::-webkit-selection {
  color: #222;
  background-color: white;
}

/* Sidebar UI */
#lava-sidebar ul li {
  background: url(../images/lin-bullet.gif) no-repeat left 2px;
  list-style-type: none;
  padding-left: 20px;
}

#lava-sidebar span.has-tooltip {
  border-bottom: 1px dotted;
}

#lava-sidebar dl {
  margin: 0 0 0 1em;
  padding: 0;
}

#lava-sidebar dt {
  font-weight: bold;
  margin: 0;
  padding: 0;
}

#lava-sidebar dd {
  margin: 0 0 0.5ex 1em;
  padding: 0;
}

#lava-sidebar p.help_text {
  color: #888;
  padding: 2pt;
}

#lava-sidebar .help-button {
  margin: 0 0 0 0.5em;
  font-size: 7pt;
  font-weight: bold;
  cursor: help;
  background-color: #555;
  color: white;
  border-radius: 0.5em;
  padding: 0.3em;
}

#lava-sidebar ul {
  margin: 0 0 0 1em;
  padding: 0 0 0 0;
  list-style-position: inside;
  list-style-type: square;
}

#lava-sidebar dd ul {
  margin: 0 0 0 0;
  padding: 0 0 0 0;
}

#lava-sidebar dd p {
  margin: 0.2ex 0;
}

#lava-sidebar h3 {
  margin: 2ex 0 1ex 0;
  padding: 0 0 0 0;
  font-size: 12pt;
  font-weight: bold;
  line-height: 1.2ex;
  color: inherit;
}

#lava-sidebar h3 + p {
  margin: 0;
  text-indent: 1ex;
}

